tests/ui/crate_local_distributed_slice/initializer.stderr
error: distributed slice elements are added with `distributed_slice_element!(...)`
  --> $DIR/initializer.rs:4:1
   |
LL | const MEOWS: [&str; _] = ["meow"];
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

